finally released violation export methods